@@ -1,0 +1,51 @@
+/*
+ * Tapestry Web Application Framework
+ * Copyright (c) 2001 by Howard Ship and Primix
+ *
+ * Primix
+ * 311 Arsenal Street
+ * Watertown, MA 02472
+ * http://www.primix.com
+ * mailto:hship@primix.com
+ * 
+ * This library is free software.
+ * 
+ * You may redistribute it and/or modify it under the terms of the GNU
+ * Lesser General Public License as published by the Free Software Foundation.
+ *
+ * Version 2.1 of the license should be included with this distribution in
+ * the file LICENSE, as well as License.html. If the license is not
+ * included with this distribution, you may find a copy at the FSF web
+ * site at 'www.gnu.org' or 'www.fsf.org', or you may write to the
+ * Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139 USA.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ */
+
+package com.primix.tapestry;
+
+
+/**
+ *  An object which may render a description of itself, which is used in debugging
+ *  (i.e., by the Inspector).
+ *
+ *  @author Howard Ship
+ *  @version $Id$
+ *  @since 1.0.6
+ */
+
+
+public interface IRenderDescription
+{
+	/**
+	 *  Object should render a description of itself to the writer.
+	 *
+	 */
+	
+	public void renderDescription(IResponseWriter writer);
+}
+
